--- a/package.json
+++ b/package.json
@@ -22,20 +22,35 @@
     "expo": "~44.0.0",
     "expo-asset": "~8.4.4",
     "expo-constants": "~13.0.0",
+    "expo-contacts": "~10.1.0",
     "expo-font": "~10.0.4",
     "expo-linking": "~3.0.0",
     "expo-splash-screen": "~0.14.0",
     "expo-status-bar": "~1.2.0",
     "expo-web-browser": "~10.1.0",
+    "install": "^0.13.0",
+    "linkify-html": "^3.0.5",
+    "linkifyjs": "^3.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-floating-action": "^1.22.0",
     "react-native-material-menu": "^2.0.0",
     "react-native-pager-view": "^5.4.15",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "3.3.2",
+    "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~3.10.1",
+    "react-native-sms-verifycode": "^2.4.3",
     "react-native-tab-view": "^3.1.1",
-    "react-native-web": "0.17.1"
+    "react-native-url-preview": "^1.1.9",
+    "react-native-web": "0.17.1",
+    "react-native-webview": "^11.18.1",
+    "react-native-youtube-iframe": "^2.2.2",
+    "react-redux": "^8.0.0",
+    "react-spotify-embed": "^0.2.3",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
