--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-clipboard/clipboard": "^1.10.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/material-top-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "expo": "~44.0.0",
     "expo-asset": "~8.4.4",
+    "expo-clipboard": "~2.1.0",
     "expo-constants": "~13.0.0",
     "expo-contacts": "~10.1.0",
     "expo-font": "~10.0.4",
-    "expo-linking": "~3.0.0",
+    "expo-linking": "^3.0.0",
     "expo-splash-screen": "~0.14.0",
     "expo-status-bar": "~1.2.0",
     "expo-web-browser": "~10.1.0",
@@ -34,10 +37,13 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-confirmation-code-field": "^7.3.0",
     "react-native-floating-action": "^1.22.0",
+    "react-native-hide-show-password-input": "^1.2.0",
     "react-native-material-menu": "^2.0.0",
-    "react-native-pager-view": "^5.4.15",
+    "react-native-pager-view": "5.4.9",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-root-toast": "^3.3.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~3.10.1",
@@ -45,7 +51,7 @@
     "react-native-tab-view": "^3.1.1",
     "react-native-url-preview": "^1.1.9",
     "react-native-web": "0.17.1",
-    "react-native-webview": "^11.18.1",
+    "react-native-webview": "11.15.0",
     "react-native-youtube-iframe": "^2.2.2",
     "react-redux": "^8.0.0",
     "react-spotify-embed": "^0.2.3",
