--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "expo-clipboard": "~2.1.0",
     "expo-constants": "~13.0.0",
     "expo-contacts": "~10.1.0",
+    "expo-device": "^4.2.0",
     "expo-font": "~10.0.4",
     "expo-linking": "^3.0.0",
+    "expo-notifications": "^0.15.2",
     "expo-splash-screen": "~0.14.0",
     "expo-status-bar": "~1.2.0",
     "expo-web-browser": "~10.1.0",
@@ -56,7 +58,8 @@
     "react-redux": "^8.0.0",
     "react-spotify-embed": "^0.2.3",
     "redux": "^4.1.2",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "sentry-expo": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
