--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-notifications": "^0.15.2",
     "expo-splash-screen": "~0.14.0",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "^0.13.2",
     "expo-web-browser": "~10.1.0",
     "install": "^0.13.0",
     "linkify-html": "^3.0.5",
