--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-confirmation-code-field": "^7.3.0",
+    "react-native-dotenv": "^3.3.1",
     "react-native-floating-action": "^1.22.0",
     "react-native-hide-show-password-input": "^1.2.0",
     "react-native-material-menu": "^2.0.0",
