--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "install": "^0.13.0",
     "linkify-html": "^3.0.5",
     "linkifyjs": "^3.0.5",
+    "moment": "^2.29.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
@@ -53,6 +54,7 @@
     "react-native-screens": "~3.10.1",
     "react-native-sms-verifycode": "^2.4.3",
     "react-native-tab-view": "^3.1.1",
+    "react-native-timeago": "^0.5.0",
     "react-native-url-preview": "^1.1.9",
     "react-native-web": "0.17.1",
     "react-native-webview": "11.15.0",
