--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "expo-clipboard": "~2.1.0",
     "expo-constants": "~13.0.0",
     "expo-contacts": "~10.1.0",
-    "expo-device": "^4.2.0",
+    "expo-device": "~4.1.0",
     "expo-font": "~10.0.4",
     "expo-linking": "^3.0.0",
-    "expo-notifications": "^0.15.2",
+    "expo-notifications": "~0.14.0",
     "expo-splash-screen": "~0.14.0",
     "expo-status-bar": "~1.2.0",
-    "expo-updates": "^0.13.2",
+    "expo-updates": "~0.11.7",
     "expo-web-browser": "~10.1.0",
     "install": "^0.13.0",
     "linkify-html": "^3.0.5",
