--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 BASE_URL=http://shareinterest.app
 SERVER_URL=https://server.shareinterest.app/api
+TWITTER_BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAAIDIhAEAAAAAu6d8QlIz52d1mJzb10tjFVdmhWg%3DDR5GAlmVfBcU7oKDKZ1KDM2bpDEG9V8m3dCS5ieUaFFGQFSM8f
