--- a/package.json
+++ b/package.json
@@ -14,50 +14,53 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^12.0.0",
-    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-clipboard/clipboard": "^1.10.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/material-top-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
-    "expo": "~44.0.0",
-    "expo-asset": "~8.4.4",
-    "expo-clipboard": "~2.1.0",
-    "expo-constants": "~13.0.0",
-    "expo-contacts": "~10.1.0",
-    "expo-device": "~4.1.0",
-    "expo-font": "~10.0.4",
-    "expo-linking": "^3.0.0",
-    "expo-notifications": "~0.14.0",
-    "expo-splash-screen": "~0.14.0",
-    "expo-status-bar": "~1.2.0",
-    "expo-updates": "~0.11.7",
-    "expo-web-browser": "~10.1.0",
+    "expo": "^45.0.0",
+    "expo-asset": "~8.5.0",
+    "expo-clipboard": "~3.0.1",
+    "expo-constants": "~13.1.1",
+    "expo-contacts": "~10.2.0",
+    "expo-device": "~4.2.0",
+    "expo-font": "~10.1.0",
+    "expo-linking": "~3.1.0",
+    "expo-notifications": "~0.15.4",
+    "expo-splash-screen": "~0.15.1",
+    "expo-status-bar": "~1.3.0",
+    "expo-system-ui": "~1.2.0",
+    "expo-updates": "~0.13.4",
+    "expo-web-browser": "~10.2.1",
     "install": "^0.13.0",
     "linkify-html": "^3.0.5",
     "linkifyjs": "^3.0.5",
     "moment": "^2.29.4",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.2",
     "react-native-confirmation-code-field": "^7.3.0",
     "react-native-dotenv": "^3.3.1",
     "react-native-floating-action": "^1.22.0",
     "react-native-hide-show-password-input": "^1.2.0",
     "react-native-material-menu": "^2.0.0",
-    "react-native-pager-view": "5.4.9",
+    "react-native-modal": "^13.0.1",
+    "react-native-pager-view": "5.4.15",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-root-toast": "^3.3.0",
-    "react-native-safe-area-context": "3.3.2",
+    "react-native-safe-area-context": "4.2.4",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-screens": "~3.10.1",
+    "react-native-screens": "~3.11.1",
     "react-native-sms-verifycode": "^2.4.3",
+    "react-native-swipe-modal-up-down": "^1.1.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-timeago": "^0.5.0",
     "react-native-url-preview": "^1.1.9",
-    "react-native-web": "0.17.1",
-    "react-native-webview": "11.15.0",
+    "react-native-web": "0.17.7",
+    "react-native-webview": "11.18.1",
     "react-native-youtube-iframe": "^2.2.2",
     "react-redux": "^8.0.0",
     "react-spotify-embed": "^0.2.3",
@@ -67,9 +70,9 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
+    "@types/react-native": "~0.67.6",
     "jest": "^26.6.3",
-    "jest-expo": "~44.0.1",
+    "jest-expo": "^45.0.0",
     "react-test-renderer": "17.0.1",
     "typescript": "~4.3.5"
   },
