--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-device": "~4.2.0",
     "expo-font": "~10.1.0",
     "expo-linking": "~3.1.0",
+    "expo-network": "^4.3.0",
     "expo-notifications": "~0.15.4",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
@@ -50,7 +51,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "5.4.15",
     "react-native-phone-number-input": "^2.1.0",
-    "react-native-root-toast": "^3.3.0",
+    "react-native-root-toast": "^3.4.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~3.11.1",
