--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Share Interest",
     "slug": "share-interest",
-    "version": "1.0.0",
+    "version": "2.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "shareinterest.app",
@@ -19,11 +19,13 @@
       "**/*"
     ],
     "ios": {
+      "buildNumber": "2",
       "userInterfaceStyle": "dark",
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.shareinterest.app"
     },
     "android": {
-      "versionCode": 12,
+      "versionCode": 13,
       "userInterfaceStyle": "dark",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
