--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "react-native-timeago": "^0.5.0",
     "react-native-url-preview": "^1.1.9",
     "react-native-web": "0.17.7",
-    "react-native-webview": "^11.23.1",
+    "react-native-webview": "11.18.1",
     "react-native-youtube-iframe": "^2.2.2",
     "react-redux": "^8.0.0",
     "react-spotify-embed": "^0.2.3",
