--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "expo-web-browser": "~10.2.1",
     "install": "^0.13.0",
     "libphonenumber-js": "^1.10.14",
+    "link-preview-js": "^3.0.4",
     "linkify-html": "^3.0.5",
     "linkifyjs": "^3.0.5",
     "moment": "^2.29.4",
