--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/material-top-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "deprecated-react-native-prop-types": "^2.3.0",
     "expo": "^45.0.0",
     "expo-asset": "~8.5.0",
     "expo-clipboard": "~3.0.1",
