--- a/package.json
+++ b/package.json
@@ -22,48 +22,48 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "deprecated-react-native-prop-types": "^2.3.0",
-    "expo": "^45.0.0",
-    "expo-asset": "~8.5.0",
-    "expo-clipboard": "~3.0.1",
-    "expo-constants": "~13.1.1",
-    "expo-contacts": "~10.2.0",
-    "expo-device": "~4.2.0",
-    "expo-font": "~10.1.0",
-    "expo-linking": "~3.1.0",
-    "expo-network": "~4.2.0",
-    "expo-notifications": "~0.15.4",
-    "expo-splash-screen": "~0.15.1",
-    "expo-status-bar": "~1.3.0",
-    "expo-system-ui": "~1.2.0",
-    "expo-updates": "~0.13.4",
-    "expo-web-browser": "~10.2.1",
+    "expo": "^46.0.0",
+    "expo-asset": "~8.6.1",
+    "expo-clipboard": "~3.1.0",
+    "expo-constants": "~13.2.4",
+    "expo-contacts": "~10.3.0",
+    "expo-device": "~4.3.0",
+    "expo-font": "~10.2.0",
+    "expo-linking": "~3.2.2",
+    "expo-network": "~4.3.0",
+    "expo-notifications": "~0.16.1",
+    "expo-splash-screen": "~0.16.2",
+    "expo-status-bar": "~1.4.0",
+    "expo-system-ui": "~1.3.0",
+    "expo-updates": "~0.14.6",
+    "expo-web-browser": "~11.0.0",
     "install": "^0.13.0",
     "libphonenumber-js": "^1.10.14",
     "link-preview-js": "^3.0.4",
     "linkify-html": "^3.0.5",
     "linkifyjs": "^3.0.5",
     "moment": "^2.29.4",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.6",
     "react-native-confirmation-code-field": "^7.3.0",
     "react-native-dotenv": "^3.3.1",
     "react-native-floating-action": "^1.22.0",
     "react-native-material-menu": "^2.0.0",
     "react-native-modal": "^13.0.1",
-    "react-native-pager-view": "5.4.15",
+    "react-native-pager-view": "5.4.24",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-root-toast": "^3.4.0",
-    "react-native-safe-area-context": "4.2.4",
+    "react-native-safe-area-context": "4.3.1",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-screens": "~3.11.1",
+    "react-native-screens": "~3.15.0",
     "react-native-sms-verifycode": "^2.4.3",
     "react-native-swipe-modal-up-down": "^1.1.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-timeago": "^0.5.0",
     "react-native-url-preview": "^1.1.9",
-    "react-native-web": "0.17.7",
-    "react-native-webview": "11.18.1",
+    "react-native-web": "~0.18.7",
+    "react-native-webview": "11.23.0",
     "react-native-youtube-iframe": "^2.2.2",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.0",
@@ -72,13 +72,13 @@
     "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.67.6",
+    "@babel/core": "^7.18.6",
+    "@types/react": "~18.0.0",
+    "@types/react-native": "~0.69.1",
     "jest": "^26.6.3",
-    "jest-expo": "^45.0.0",
+    "jest-expo": "^46.0.0",
     "react-test-renderer": "17.0.1",
-    "typescript": "~4.3.5"
+    "typescript": "^4.6.3"
   },
   "private": true
 }
