--- a/app.json
+++ b/app.json
@@ -13,16 +13,20 @@
       "backgroundColor": "#ffffff"
     },
     "updates": {
-      "fallbackToCacheTimeout": 0
+      "fallbackToCacheTimeout": 0,
+      "url": "https://u.expo.dev/03ea279b-2954-4d3b-b074-440a857f13eb"
     },
     "assetBundlePatterns": [
       "**/*"
     ],
     "ios": {
-      "buildNumber": "9",
+      "buildNumber": "11",
       "userInterfaceStyle": "dark",
       "supportsTablet": true,
-      "bundleIdentifier": "com.shareinterest.app"
+      "bundleIdentifier": "com.shareinterest.app",
+      "infoPlist": {
+        "NSContactsUsageDescription": "This app uses your contact list to show you your contacts so you can invite or tag them accordingly"
+      }
     },
     "android": {
       "versionCode": 21,
@@ -42,6 +46,9 @@
       "eas": {
         "projectId": "03ea279b-2954-4d3b-b074-440a857f13eb"
       }
+    },
+    "runtimeVersion": {
+      "policy": "sdkVersion"
     }
   }
 }
