--- a/app.json
+++ b/app.json
@@ -7,6 +7,7 @@
     "icon": "./assets/images/icon.png",
     "scheme": "shareinterest.app",
     "userInterfaceStyle": "dark",
+    "sdkVersion": "46.0.0",
     "splash": {
       "image": "./assets/images/splash.png",
       "resizeMode": "contain",
