--- a/app.json
+++ b/app.json
@@ -20,7 +20,7 @@
       "**/*"
     ],
     "ios": {
-      "buildNumber": "12",
+      "buildNumber": "13",
       "userInterfaceStyle": "dark",
       "supportsTablet": true,
       "bundleIdentifier": "com.shareinterest.app",
@@ -29,13 +29,14 @@
       }
     },
     "android": {
-      "versionCode": 22,
+      "versionCode": 24,
       "userInterfaceStyle": "dark",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#000000"
       },
       "package": "com.shareinterest.app",
+      "permissions": ["READ_CONTACTS", "WRITE_CONTACTS"],
       "googleServicesFile": "./google-services.json"
     },
     "web": {
